Don't use scientific notation to represent numbers

In the "Serializing CSS Values" section of the cssom spec, it says
"Note: scientific notation is not used."
https://drafts.csswg.org/cssom/#serializing-css-values

Please note that the code had to be written by hand as classes such as
dtoa.h and Decimal.h didn't have helpers to serve this purpose.

Bug: 720225
Change-Id: I44b00ef5c2edf301ea55e033a4a9424da5f050b6